--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
 input {
   padding-left: 10px;
   padding-right: 10px;
-  border: 1px solid green;
+  border: 1px solid rgb(218, 94, 0);
   width: 100%;
   height: 2em;
   box-sizing: border-box;
@@ -16,7 +16,7 @@ input {
 
 button {
   margin-top: 10px;
-  background-color: green;
+  background-color: rgb(218, 94, 0);
   color: white;
   border: none;
   width: 30%;
@@ -24,4 +24,19 @@ button {
   font-weight: bold;
   padding-left: 10px;
   padding-right: 10px;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+  margin-top: 20px;
+}
+
+li {
+  font-size: large;
+  margin-bottom: 5px;
+}
+
+a {
+  color: rgb(218, 94, 0);
 }
