--- a/index.css
+++ b/index.css
@@ -7,11 +7,10 @@ body {
 }
 
 input {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 10px;
   border: 1px solid rgb(218, 94, 0);
   width: 100%;
-  height: 2em;
+  height: 3em;
   box-sizing: border-box;
 }
 
@@ -19,12 +18,14 @@ button {
   margin-top: 10px;
   background-color: rgb(218, 94, 0);
   color: white;
-  border: none;
-  width: 30%;
-  height: 2.5em;
+  border: 1px solid rgb(218, 94, 0);
   font-weight: bold;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 10px 20px;
+}
+
+#delete-btn {
+  background-color: white;
+  color: rgb(218, 94, 0);
 }
 
 ul {
